--- a/nuget/Sdk.Project.Prototype.nuspec
+++ b/nuget/Sdk.Project.Prototype.nuspec
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
   <metadata>
-    <id>$id$</id>
-    <version>$version$</version>
+    <id>sdk-project-prototype</id>
+    <version>0.1</version>
     <description>$description$</description>
-    <authors>$authors$</authors>
-    <owners>$authors$</owners>
-    <copyright>$copyright$</copyright>
-    <projectUrl>$projecturl$</projectUrl>
-    <licenseUrl>$licenseurl$</licenseUrl>
-    <iconUrl>$iconurl$</iconUrl>
-    <tags>$tags$</tags>
+    <authors>chamons</authors>
+    <owners>chamosn</owners>
+    <copyright></copyright>
+    <projectUrl></projectUrl>
+    <licenseUrl></licenseUrl>
+    <iconUrl></iconUrl>
+    <tags></tags>
     <packageTypes>
-      <packageType name="$packagetype$" />
+      <packageType name="" />
     </packageTypes>
   </metadata>
   <files>
